<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_agregar"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/title_agregar" />

    <item
        android:id="@+id/navigation_watchlist"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_watchlist" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_profile" />

</menu>